--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "14.2.8",
     "fast-sort": "^3.4.1",
     "next": "14.2.8",
+    "next-auth": "^4.24.7",
     "postcss": "8.4.45",
     "prisma": "^5.19.1",
     "react": "18.3.1",
