--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prisma": "^5.19.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-icons": "^5.3.0",
     "tailwindcss": "3.4.10",
     "typescript": "5.5.4",
     "zod": "^3.23.8"
